# Multi-Model-Researcher

./: .gitignore  Architecture.md  LICENSE  MakeFile  README.md  app.py  data.txt  docker-compose.yml  mcp_server.py  pyproject.toml  requirements.txt  server.py
agents/: analyzer_agent.py  data_agent.py  data_collector.py  research_handler.py  summarizer.py  supervisor.py
agents/analyzer/: analyzer_agent.py
agents/base/: __init__.py  agent.py  auth.py  communication.py  exceptions.py
agents/data_collector/: collector_agent.py
agents/supervisor/: __init__.py  app.py  supervisor_agent.py
agents/supervisor/routes/: agents.py  tasks.py
docs/: Architecture.md  RoadMap.md
extras/: model_detector.py  model_interface_combined.py
legacy_code/: mcp_server.py
legacy_code/agents/: analyzer.py  analyzer_agent.py  formatter.py  report_maker.py  summarizer.py  supervisor.py
logs/: debug_response_lm_studio.json
models/: model_interface.py  provider_utils.py
results/: -1384081665310642093.txt  -2119212684079218770.txt  -328401368492972399.txt  -3741260564976471060.txt  -516390284450606037.txt  -6100316755610063625.txt  -6762057507582595954.txt  -7078409100283458454.txt  -7477731487954245157.txt  -8541693637552450715.txt  2199555359515608507.txt  2965934058875185704.txt  3352523109767436627.txt  363128791834125748.txt  4540817523581725772.txt  5033783682792617619.txt
scripts/: requirements.txt
src/: research_handler.py
src/storage/: audit.py  storage.py
storage/: audit.py  storage.py
