[project]
name = "multi-model-researcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.6",
    "ollama>=0.5.3",
    "requests>=2.32.5",
    "streamlit>=1.48.1",
]
